# pg-raggraph

./: .env.example  .gitignore  .pre-commit-config.yaml  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  PROJECT.md  README.md  SECURITY.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yml  test.yml
benchmarks/: BENCHMARKING_GUIDE.md  BENCHMARK_RESULTS.md  DATASETS.md  FINAL_RESULTS.md  TESTING_STRATEGY.md  ab_gate_smoke.py  cost-log.md  defer_extraction_bench.py  demo_smart_mode.py  download_pg_docs.py  download_scotus.py  extract_kgrag_pdfs.py  ingest_all.py  ingest_perf.py  ingest_perf_results-2026-05-27.md  mcp_freshness_perf.py  pg-agents-results.md  prepare_hotpotqa.py  resolve_lookup_perf.py  results-2026-05-28-three-bench-smoke.md  run_age_compare_ntsb.py  run_all_benchmarks.py  run_benchmark.py  run_hotpotqa.py  run_llm_judge.py  scotus-50-query-buckets.yaml  tier1-RESULTS.md  tier1-sanity.py
benchmarks/ab-gate/: RESULTS.md  gold-mhr.yaml  mhr-ab.yaml  ntsb-ab.yaml  scotus-ab.yaml
benchmarks/age-bakeoff/: .env.example  .gitignore  RETURN-TO-BAKEOFF-2.md  RETURN-TO-BAKEOFF-3.md  RETURN-TO-BAKEOFF.md  SESSION-HANDOFF.md  TODO.md  conftest.py  docker-compose.yml  pyproject.toml  run-bakeoff.sh
benchmarks/age-bakeoff/corpora/external-extractions/: graphrag-bench-medical.json  graphrag-bench-medical.v1_broken_chunker.json
benchmarks/age-bakeoff/docker/age/: Dockerfile
benchmarks/age-bakeoff/docker/age/initdb/: README.md
benchmarks/age-bakeoff/questions/: acme.yaml  graphrag-bench-medical.yaml  graphrag-bench-novel.yaml  pg-src.yaml  scotus.yaml
benchmarks/age-bakeoff/results/: ACME-HIER-REPLICATION.md  GRAPH-AUGMENTATION-VERDICT.md  REPORT-VERDICT.md  REPORT.md  cost-diagnose.json  cost-judge.json  cost-run.json
benchmarks/age-bakeoff/results/diagnostics/: FINDINGS.md  context_relevance.json  factorial-accuracy-fp32-REPORT.md  factorial-accuracy-fp32.json  factorial-accuracy-int8-REPORT.md  factorial-accuracy-int8.json  factorial-probe-COMPARE.md  factorial-probe-fp32-REPORT.md  factorial-probe-fp32.json  factorial-probe-int8-REPORT.md  factorial-probe-int8.json  gold_strictness.json
benchmarks/age-bakeoff/results/judge/: acme.json  acme__global.json  acme__hier_global.json  acme__hier_hybrid.json  acme__hier_local.json  acme__hier_naive.json  acme__hier_naive_boost.json  acme__hier_smart.json  acme__local.json  acme__naive-boost.json  acme__naive.json  acme__smart.json  graphrag-bench-medical__age_global.json  graphrag-bench-medical__age_local.json  graphrag-bench-medical__global.json  graphrag-bench-medical__hybrid.json  graphrag-bench-medical__hybrid.v1_broken_chunker.json  graphrag-bench-medical__hybrid.v2_n1_backup.json  graphrag-bench-medical__local.json  graphrag-bench-medical__naive.json  graphrag-bench-medical__naive_boost.json  graphrag-bench-medical__naive_boost.v2_n1_backup.json  graphrag-bench-medical__smart.json  scotus.json  scotus__global.json  scotus__hier_global.json  scotus__hier_hybrid.json  scotus__hier_local.json  scotus__hier_naive.json  scotus__hier_naive_boost.json  scotus__hier_smart.json  scotus__local.json  scotus__naive-boost.json  scotus__naive.json  scotus__smart.json
benchmarks/age-bakeoff/scripts/: bench-corpus.sh  factorial-accuracy-runner.py  factorial-compare-fp32-int8.py  factorial-probe-query.py  fetch_pg_src.sh  launch-gb-medical-mini-rerun.sh  launch-gb-medical-remaining.sh  launch-gb-medical-v2-hybrid-n3.sh  launch-gb-medical-v2-matrix.sh  launch-gb-medical-v2-naive_boost-n3.sh  port_acme_seed.py  port_scotus_seed.py  run-hier-sweep.sh  run-mode-sweep.sh  time_scotus_ingest.py
benchmarks/age-bakeoff/scripts/chunkshop/: __init__.py  config.py
benchmarks/age-bakeoff/src/age_bakeoff/: chunker.py  cli.py  config.py  cost.py  diagnostics.py  llm_clients.py  models.py  runner.py
benchmarks/age-bakeoff/src/age_bakeoff/corpora/: acme.py  base.py  external.py  pg_src.py  scotus.py
benchmarks/age-bakeoff/src/age_bakeoff/engines/: age.py  base.py  msgraph.py  openai_answerer.py  pgrg.py
benchmarks/age-bakeoff/src/age_bakeoff/extraction/: external_corpora.py  loaders.py  pg_src.py  prompts.py
benchmarks/age-bakeoff/src/age_bakeoff/extraction/data/: acme.json  scotus.json
benchmarks/age-bakeoff/src/age_bakeoff/questions/: __init__.py  schema.py
benchmarks/age-bakeoff/src/age_bakeoff/report/: aggregate.py  generator.py
benchmarks/age-bakeoff/src/age_bakeoff/scorers/: chunk_relevance.py  fact_recall.py  llm_judge.py
benchmarks/age-bakeoff/src/age_bakeoff/tools/: extract_external_corpus.py  materialize_questions.py
benchmarks/age-bakeoff/tests/: conftest.py  test_age_engine.py  test_chunk_relevance.py  test_chunker.py  test_config.py  test_cost.py  test_diagnostics.py  test_engine_parity.py  test_engine_protocol.py  test_external_corpora.py  test_extraction_loaders.py  test_fact_recall.py  test_llm_judge.py  test_models.py  test_msgraph_engine.py  test_pg_src_extraction.py  test_pgrg_engine.py  test_pgrg_engine_top_k.py  test_questions_schema.py  test_report.py  test_runner_schema.py  test_top_k_sweep.py
benchmarks/age-bakeoff/tests/chunkshop/: test_config.py
benchmarks/age-bakeoff/tests/fixtures/: tiny_doc.md  tiny_doc.py  tiny_questions.yaml
benchmarks/e2e/: README.md  __init__.py  (+8 more)
docs/: Config-Reference.md  EVOLUTION-API-QUICKREF.md  FINDINGS.md  README.md  USE-CASES.md  apache-age-comparison.md  blog-what-we-learned.md  chunkshop-user-guide.md  deployment-embedding-scaling.md  devmem-guide.md  graph-direction-decision.md  modes.md  operations-guide.md  smart-mode-plan.md  user-guide.md  why-not-apache-age.md
research/: apache-age-evaluation.md  competition-comparison.md  graphrag-psql.md  lightrag.md  main-research.md  postgres-graph-rag.md
tests/: conftest.py  test_e2e.py  test_graph_wins.py  test_retrieval_comparison.py  test_trace_emit.py  test_user_journey.py
(+471 files in other folders)
