[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-raggraph"
version = "0.3.0a3"
description = "The fastest, simplest way to add knowledge-graph-powered RAG to any app — backed by PostgreSQL."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "yonk-tools" }]
keywords = ["rag", "graphrag", "postgresql", "pgvector", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pgvector>=0.3",
    "fastembed>=0.4",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "click>=8.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.6"]
demo = ["pg-raggraph[server]"]
community = ["python-igraph>=0.11", "leidenalg>=0.10"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.11"]
mcp = ["mcp>=1.0"]
# Sibling library for richer chunking strategies + optional metadata extraction.
# Optional but recommended — see docs/cookbook/chunkshop-integration.md.
chunkshop = ["chunkshop>=0.4.3"]
# Deterministic, LLM-free entity + co-occurrence-edge extraction.
# Requires the spaCy model too: python -m spacy download en_core_web_sm
# See docs/superpowers/specs/2026-05-18-lede-spacy-extraction-design.md
lede_spacy = ["lede>=0.4", "lede-spacy>=0.4", "spacy>=3.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "coverage>=7.0",
    "beautifulsoup4>=4.14.3",
    "lede>=0.4",
    "lede-spacy>=0.4",
    "spacy>=3.7",
]
# E2E benchmark harness — datasets pulled as parquet from HuggingFace mirrors.
bench = ["pyarrow>=17", "httpx>=0.27"]
all = ["pg-raggraph[server,community,langchain,llamaindex,mcp,chunkshop,lede_spacy]"]

[project.scripts]
pgrg = "pg_raggraph.cli:main"

[project.urls]
Homepage = "https://github.com/yonk-labs/pg-raggraph"
Repository = "https://github.com/yonk-labs/pg-raggraph"
Issues = "https://github.com/yonk-labs/pg-raggraph/issues"
Changelog = "https://github.com/yonk-labs/pg-raggraph/blob/main/CHANGELOG.md"
Documentation = "https://github.com/yonk-labs/pg-raggraph/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_raggraph"]

[tool.hatch.build.targets.sdist]
# Default hatchling sdist behavior bundles everything not gitignored — that
# was producing an 87 MB tarball (benchmarks/age-bakeoff alone is sizeable).
# Pin the sdist to source + project metadata; benchmarks, blog posts, and
# specs live in the GitHub repo for anyone who wants to read them.
include = [
    "src/pg_raggraph",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = [
    "benchmarks/kg-rag-eval",  # cloned third-party dataset
    "benchmarks/scotus",
    "benchmarks/postgres-docs",
    "benchmarks/hotpotqa",
    # age-bakeoff is a separate sub-project with its own pyproject.toml +
    # ruff config. It maintains its own lint posture; the root config
    # shouldn't police it (was masked by the broken-CI bug pre-PR-201).
    "benchmarks/age-bakeoff",
    # sales-crm-demo is a cookbook demo with its own format conventions
    # (long SQL strings, copy-paste friendly). Excluded for the same
    # reason as age-bakeoff.
    "benchmarks/sales-crm-demo",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Benchmark-style test files tolerate longer lines and legacy variable names
"tests/integration/test_graph_wins.py" = ["E501"]
"tests/integration/test_retrieval_comparison.py" = ["E501", "E741"]
# Benchmarks are scripts, not library code — relax rules
"benchmarks/*.py" = ["E501", "E402", "E741", "F841"]
# Cookbook samples are documentation/demo scripts, not library code
"docs/cookbook/samples/*.py" = ["E501", "E402", "E741", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running PostgreSQL",
]
